third_party/move/move-compiler-v2/tests/match-checks/enum_variant_literal_not_supported.exp

Diagnostics:
error: literals are not allowed here
   ┌─ tests/match-checks/enum_variant_literal_not_supported.move:10:19
   │
10 │             E::V1(1) => 1,
   │                   ^

error: literals are not allowed here
   ┌─ tests/match-checks/enum_variant_literal_not_supported.move:13:24
   │
13 │             E::V3 { x: 42 } => 4,
   │                        ^^
